Header and menu scss

--- a/scss/color1.scss
+++ b/scss/color1.scss
@@ -1,5 +1,6 @@
+
 @import "theme/variables";
 $theme-default: #96cb57;
 @import "theme/style";
-//@import "theme/menu";  // Comment out theme and it works
+@import "theme/menu";  // Comment out theme and it works
 @import "theme/responsive";
