--- a/scss/theme/_menu.scss
+++ b/scss/theme/_menu.scss
@@ -136,123 +136,123 @@
 // :: 1.1. Colors
 // ----------------------------------------------------------
 
-$theme-default:-dark: darken($theme-default:, 5%) !default;
-$theme-default:-light: lighten($theme-default:, 30%) !default;
-$theme-default:__white: #fff !default;
-$theme-default:__gray: darken($theme-default:__white, 34%) !default;
+$theme-deafult-dark: darken(#96cb57, 5%) !default;
+$theme-deafult-light: lighten(#96cb57, 30%) !default;
+$theme-deafult__white: #fff !default;
+$theme-deafult__gray: darken($theme-deafult__white, 34%) !default;
 $dark: #333333;
-$theme-default:__text-shadow: rgba(0, 0, 0, 0.2) !default;
+$theme-deafult__text-shadow: rgba(0, 0, 0, 0.2) !default;
 
 // ----------------------------------------------------------
 // :: 1.2. Typography
 // ----------------------------------------------------------
-$theme-default:__font-size-base: 14px !default;
-$theme-default:__font-size-small: 16px !default;
-$theme-default:__line-height: 23px !default;
+$theme-deafult__font-size-base: 14px !default;
+$theme-deafult__font-size-small: 16px !default;
+$theme-deafult__line-height: 23px !default;
 
 // ----------------------------------------------------------
 // :: 1.3. Borders
 // ----------------------------------------------------------
-$theme-default:__border-width: 1px !default;
-$theme-default:__border-radius-base: 8px !default;
-$theme-default:__border-radius-small: 4px !default;
+$theme-deafult__border-width: 1px !default;
+$theme-deafult__border-radius-base: 8px !default;
+$theme-deafult__border-radius-small: 4px !default;
 
 // ----------------------------------------------------------
 // :: 1.4. Collapsible main menu
 // ----------------------------------------------------------
 // Menu box
-$theme-default:__collapsible-bg: transparent !default;
-$theme-default:__collapsible-border-radius: $theme-default:__border-radius-base !default;
+$theme-deafult__collapsible-bg: transparent !default;
+$theme-deafult__collapsible-border-radius: $theme-deafult__border-radius-base !default;
 
 // Items
-$theme-default:__collapsible-item-color: $theme-default:__white !default;
-$theme-default:__collapsible-item-bg: $theme-default: !default;
-$theme-default:__collapsible-item-current-color: $theme-default:__white !default;
-$theme-default:__collapsible-item-current-bg: $theme-default: !default;
-$theme-default:__collapsible-item-disabled-color: lighten(
-  $theme-default:,
+$theme-deafult__collapsible-item-color: $theme-deafult__white !default;
+$theme-deafult__collapsible-item-bg: #96cb57 !default;
+$theme-deafult__collapsible-item-current-color: $theme-deafult__white !default;
+$theme-deafult__collapsible-item-current-bg: #96cb57 !default;
+$theme-deafult__collapsible-item-disabled-color: lighten(
+  #96cb57,
   30%
 ) !default;
-$theme-default:__collapsible-item-padding-vertical: 10px !default;
-$theme-default:__collapsible-item-padding-horizontal: 20px !default;
+$theme-deafult__collapsible-item-padding-vertical: 10px !default;
+$theme-deafult__collapsible-item-padding-horizontal: 20px !default;
 
 // Toggle button (sub menu indicators)
-$theme-default:__collapsible-toggle-bg: rgba(0, 0, 0, 0.1) !default;
+$theme-deafult__collapsible-toggle-bg: rgba(0, 0, 0, 0.1) !default;
 
 // ----------------------------------------------------------
 // :: 1.5. Collapsible sub menus
 // ----------------------------------------------------------
 
 // Menu box
-$theme-default:__collapsible-sub-bg: $theme-default:__white !default;
+$theme-deafult__collapsible-sub-bg: $theme-deafult__white !default;
 
 // Items
-$theme-default:__collapsible-sub-item-color: $theme-default:-dark !default;
-$theme-default:__collapsible-sub-item-bg: transparent !default;
-$theme-default:__collapsible-sub-item-current-color: $theme-default:__white !default;
-$theme-default:__collapsible-sub-item-current-bg: $theme-default: !default;
-$theme-default:__collapsible-sub-item-disabled-color: darken(
-  $theme-default:__white,
+$theme-deafult__collapsible-sub-item-color: $theme-deafult-dark !default;
+$theme-deafult__collapsible-sub-item-bg: transparent !default;
+$theme-deafult__collapsible-sub-item-current-color: $theme-deafult__white !default;
+$theme-deafult__collapsible-sub-item-current-bg: #96cb57 !default;
+$theme-deafult__collapsible-sub-item-disabled-color: darken(
+  $theme-deafult__white,
   30%
 ) !default;
 
 // Items separators
-$theme-default:__collapsible-sub-separators-color: rgba(0, 0, 0, 0.05) !default;
+$theme-deafult__collapsible-sub-separators-color: rgba(0, 0, 0, 0.05) !default;
 
 // Items text indentation for deeper levels
-$theme-default:__collapsible-sub-item-indentation: 8px !default;
+$theme-deafult__collapsible-sub-item-indentation: 8px !default;
 
 // ----------------------------------------------------------
 // :: 1.6. Desktop main menu
 // ----------------------------------------------------------
 
 // Items separators
-$theme-default:__desktop-separators-size: 1px !default;
-$theme-default:__desktop-separators-color: darken($theme-default:, 5%) !default;
+$theme-deafult__desktop-separators-size: 1px !default;
+$theme-deafult__desktop-separators-color: darken(#96cb57, 5%) !default;
 
 // Sub menu indicators
-$theme-default:__desktop-arrow-size: 5px !default; // border-width
-$theme-default:__desktop-arrow-color: $theme-default:-light !default;
+$theme-deafult__desktop-arrow-size: 5px !default; // border-width
+$theme-deafult__desktop-arrow-color: $theme-deafult-light !default;
 
 // Vertical items
-$theme-default:__desktop-vertical-item-padding-vertical: 9px !default;
-$theme-default:__desktop-vertical-item-padding-horizontal: 23px !default;
+$theme-deafult__desktop-vertical-item-padding-vertical: 9px !default;
+$theme-deafult__desktop-vertical-item-padding-horizontal: 23px !default;
 
 // ----------------------------------------------------------
 // :: 1.7. Desktop sub menus
 // ----------------------------------------------------------
 
 // Menu box
-$theme-default:__desktop-sub-bg: $theme-default:__white !default;
-$theme-default:__desktop-sub-border-color: $theme-default:__gray !default;
-$theme-default:__desktop-sub-border-radius: $theme-default:__border-radius-small !default;
-$theme-default:__desktop-sub-padding-vertical: 7px !default;
-$theme-default:__desktop-sub-padding-horizontal: 0 !default;
+$theme-deafult__desktop-sub-bg: $theme-deafult__white !default;
+$theme-deafult__desktop-sub-border-color: $theme-deafult__gray !default;
+$theme-deafult__desktop-sub-border-radius: $theme-deafult__border-radius-small !default;
+$theme-deafult__desktop-sub-padding-vertical: 7px !default;
+$theme-deafult__desktop-sub-padding-horizontal: 0 !default;
 
 // Items
-$theme-default:__desktop-sub-item-color: $theme-default:-dark !default;
-$theme-default:__desktop-sub-item-bg: transparent !default;
-$theme-default:__desktop-sub-item-hover-color: $theme-default:__white !default;
-$theme-default:__desktop-sub-item-hover-bg: $theme-default: !default;
-$theme-default:__desktop-sub-item-current-color: $theme-default:__white !default;
-$theme-default:__desktop-sub-item-current-bg: $theme-default: !default;
-$theme-default:__desktop-sub-item-disabled-color: darken(
-  $theme-default:__white,
+$theme-deafult__desktop-sub-item-color: $theme-deafult-dark !default;
+$theme-deafult__desktop-sub-item-bg: transparent !default;
+$theme-deafult__desktop-sub-item-hover-color: $theme-deafult__white !default;
+$theme-deafult__desktop-sub-item-hover-bg: #96cb57 !default;
+$theme-deafult__desktop-sub-item-current-color: $theme-deafult__white !default;
+$theme-deafult__desktop-sub-item-current-bg: #96cb57 !default;
+$theme-deafult__desktop-sub-item-disabled-color: darken(
+  $theme-deafult__white,
   30%
 ) !default;
-$theme-default:__desktop-sub-item-padding-vertical: 9px !default;
-$theme-default:__desktop-sub-item-padding-horizontal: 23px !default;
+$theme-deafult__desktop-sub-item-padding-vertical: 9px !default;
+$theme-deafult__desktop-sub-item-padding-horizontal: 23px !default;
 
 // ----------------------------------------------------------
 // desktop mode
 // ----------------------------------------------------------
 
 // calc item height and sub menus toggle button size
-$theme-default:__item-height: $theme-default:__line-height +
-  $theme-default:__collapsible-item-padding-vertical * 2;
+$theme-deafult__item-height: $theme-deafult__line-height +
+  $theme-deafult__collapsible-item-padding-vertical * 2;
 // set toggle button size to 80% of item height
-$theme-default:__toggle-size: floor($theme-default:__item-height * 0.8);
-$theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
+$theme-deafult__toggle-size: floor($theme-deafult__item-height * 0.8);
+$theme-deafult__toggle-spacing: floor($theme-deafult__item-height * 0.1);
 
 .toggle-nav {
   position: relative;
@@ -261,7 +261,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
   cursor: pointer;
   i {
     font-size: 24px;
-    color: lighten($theme-default:, 5%);
+    color: lighten(#96cb57, 5%);
   }
 }
 .mega-menu-banner {
@@ -298,7 +298,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
       color: $dark-font;
       font-size: 16px;
       font-weight: 400;
-      line-height: $theme-default:__line-height;
+      line-height: $theme-deafult__line-height;
       text-decoration: none;
       text-transform: uppercase;
       padding-top: 42px;
@@ -306,56 +306,56 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
       letter-spacing: 0.07em;
     }
     &:hover {
-      color: $theme-default:;
+      color: #96cb57;
     }
     &.disabled {
-      color: $theme-default:__collapsible-item-disabled-color;
+      color: $theme-deafult__collapsible-item-disabled-color;
     }
     .sub-arrow {
       position: absolute;
       top: 50%;
-      margin-top: -(ceil($theme-default:__toggle-size / 2));
+      margin-top: -(ceil($theme-deafult__toggle-size / 2));
       left: auto;
       right: 15px;
-      width: $theme-default:__toggle-size;
-      height: $theme-default:__toggle-size;
+      width: $theme-deafult__toggle-size;
+      height: $theme-deafult__toggle-size;
       overflow: hidden;
-      font: bold #{$theme-default:__font-size-small}/#{$theme-default:__toggle-size}
+      font: bold #{$theme-deafult__font-size-small}/#{$theme-deafult__toggle-size}
         monospace !important;
       text-align: center;
       text-shadow: none;
-      border-radius: $theme-default:__border-radius-small;
+      border-radius: $theme-deafult__border-radius-small;
     }
   }
-  @include round_corner($theme-default:__collapsible-border-radius);
+  @include round_corner($theme-deafult__collapsible-border-radius);
   ul {
-    background: $theme-default:__collapsible-sub-bg;
+    background: $theme-deafult__collapsible-sub-bg;
     ul {
-      background: rgba(lighten($theme-default:, 2%), 0.04);
+      background: rgba(lighten(#96cb57, 2%), 0.04);
     }
     a {
       &,
       &:hover,
       &:focus,
       &:active {
-        background: $theme-default:__collapsible-sub-item-bg;
-        color: $theme-default:__collapsible-sub-item-color;
+        background: $theme-deafult__collapsible-sub-item-bg;
+        color: $theme-deafult__collapsible-sub-item-color;
         font-size: 14px;
         text-shadow: none;
         // add indentation for sub menus text
-        //border-left: $theme-default:__collapsible-sub-item-indentation solid transparent;
+        //border-left: $theme-deafult__collapsible-sub-item-indentation solid transparent;
       }
       &.current {
-        background: $theme-default:__collapsible-sub-item-current-bg;
-        color: $theme-default:__collapsible-sub-item-current-color;
+        background: $theme-deafult__collapsible-sub-item-current-bg;
+        color: $theme-deafult__collapsible-sub-item-current-color;
       }
       &.disabled {
-        color: $theme-default:__collapsible-sub-item-disabled-color;
+        color: $theme-deafult__collapsible-sub-item-disabled-color;
       }
     }
-    @include sub_items($theme-default:__collapsible-sub-item-indentation);
+    @include sub_items($theme-deafult__collapsible-sub-item-indentation);
     li {
-      border-top: 1px solid $theme-default:__collapsible-sub-separators-color;
+      border-top: 1px solid $theme-deafult__collapsible-sub-separators-color;
       &:first-child {
         border-top: 0;
       }
@@ -416,7 +416,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
     a {
       &:hover {
         h6 {
-          color: $theme-default:;
+          color: #96cb57;
         }
       }
     }
@@ -433,7 +433,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
       }
       &:hover {
         h6 {
-          color: $theme-default:;
+          color: #96cb57;
         }
         &:before {
           width: 0 !important;
@@ -457,7 +457,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
       }
       &:hover {
         h6 {
-          color: $theme-default:;
+          color: #96cb57;
         }
         &:before {
           width: 0 !important;
@@ -541,7 +541,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
   }
   .lable-nav {
     position: absolute;
-    background-color: $theme-default:;
+    background-color: #96cb57;
     padding: 2px 7px;
     color: $white;
     top: 20px;
@@ -556,7 +556,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
       height: 0;
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
-      border-top: 5px solid $theme-default:;
+      border-top: 5px solid #96cb57;
       top: 15px;
       left: 5px;
     }
@@ -887,10 +887,10 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
     ul {
       border: none;
       padding: 30px 20px 30px 5px;
-      background: $theme-default:__desktop-sub-bg;
+      background: $theme-deafult__desktop-sub-bg;
 
       ul {
-        background: $theme-default:__desktop-sub-bg;
+        background: $theme-deafult__desktop-sub-bg;
       }
       a {
         position: relative;
@@ -900,7 +900,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
           content: "";
           height: 2px;
           width: 0;
-          background-color: $theme-default:;
+          background-color: #96cb57;
           transition: 0.5s ease;
         }
         &,
@@ -909,7 +909,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
         &:active,
         &.highlighted {
           border: 0 !important;
-          background: $theme-default:__desktop-sub-item-bg;
+          background: $theme-deafult__desktop-sub-item-bg;
           color: $dark-font;
           border-radius: 0 !important;
           font-size: 16px;
@@ -942,7 +942,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
       display: none;
       visibility: hidden;
       overflow: hidden;
-      background: $theme-default:__desktop-sub-bg;
+      background: $theme-deafult__desktop-sub-bg;
       height: 20px;
     }
     .scroll-up-arrow,
@@ -957,12 +957,12 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
       border-width: 8px; // tweak size of the arrow
       border-style: dashed dashed solid dashed;
       border-color: transparent transparent
-        $theme-default:__desktop-sub-item-color transparent;
+        $theme-deafult__desktop-sub-item-color transparent;
     }
     .scroll-down-arrow {
       top: 6px;
       border-style: solid dashed dashed dashed;
-      border-color: $theme-default:__desktop-sub-item-color transparent
+      border-color: $theme-deafult__desktop-sub-item-color transparent
         transparent transparent;
     }
     // Main menu box
@@ -980,8 +980,8 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
       }
       > li {
         &:first-child {
-          border-left: $theme-default:__desktop-separators-size solid
-            $theme-default:__desktop-separators-color;
+          border-left: $theme-deafult__desktop-separators-size solid
+            $theme-deafult__desktop-separators-color;
         }
         &:last-child {
           border-left: 0;
@@ -999,8 +999,8 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
     // Main menu box
     &.sm-vertical {
       a {
-        padding: $theme-default:__desktop-vertical-item-padding-vertical
-          $theme-default:__desktop-vertical-item-padding-horizontal;
+        padding: $theme-deafult__desktop-vertical-item-padding-vertical
+          $theme-deafult__desktop-vertical-item-padding-horizontal;
         .sub-arrow {
           &:before {
             content: "\f105";
@@ -1411,7 +1411,7 @@ $theme-default:__toggle-spacing: floor($theme-default:__item-height * 0.1);
             color: $dark-font;
             font-weight: 400;
             &:hover {
-              color: $theme-default:;
+              color: #96cb57;
               font-size: 14px;
               padding: 5px 35px;
             }
