--- a/scss/theme/_style.scss
+++ b/scss/theme/_style.scss
@@ -1842,7 +1842,7 @@ header.video-header .top-header .header-dropdown li a i {
   height: 75vh;
 }
 .home-slider .home.home-png1, .center-slider .home.home-png1 {
-  background-image: url("/assets/images/home-banner/1.png");
+  background-image: url("/static/assets/images/banner/01.jpg");
 }
 .home-slider .home.home-png2, .center-slider .home.home-png2 {
   background-image: url("/assets/images/home-banner/2.png");
